<resources>
    <string name="app_name">ManSUn</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotpassword">Lupa Kata Sandi?</string>
    <string name="beranda">Beranda</string>
    <string name="jadwal">Jadwal</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="profil">Profil</string>
    <string name="berlangsung">berlangsung</string>
    <string name="roles">Roles</string>
    <string name="saranmasukan">Saran dan Masukan</string>
    <string name="setting">Pengaturan</string>
    <string name="keluar">Keluar</string>
    <string name="not_submitted">Not Submitted</string>
    <string name="submitted">Submitted</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
</resources>